k8s/service5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service5-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: service5
